# RNetCDF

./: .Rbuildignore  .gitignore  .travis.yml  ChangeLog  DESCRIPTION  INDEX  INSTALL  LICENSE  MD5  NAMESPACE  NEWS  README  README.md  aclocal.m4  cleanup  cleanup.win  configure  configure.ac  configure.win  configure.win.ac
.github/workflows/: check-extra.yaml  check-linux-mpi.yaml  check-linux.yaml  check-macos.yaml  check-nc-versions.yaml  check-standard.yaml  check-versions.yaml  check-windows.yaml  check-windows.yaml.bak  test-coverage.yaml  test-rchk.yaml  test-rchk.yaml.disabled  test-ubsan.yaml  ubuntu-native.yaml
R/: RNetCDF.R  Rmpi.R  Rng.R  Rparutilities.R  attribute.R  config.R.in  dataset.R  dimension.R  group.R  load.R  load.R.in  type.R  udunits.R  utility.R  variable.R  zzz.R
R/windows/: load.R
branches/1.8/: NAMESPACE  NEWS  configure  configure.ac
branches/1.8/R/: load.R.in
branches/1.8/man/: att.inq.nc.Rd
branches/2.0/: DESCRIPTION  INSTALL  NEWS  configure.ac
branches/2.0/R/: RNetCDF.R
branches/2.0/man/: 00RNetCDF.Rd  att.delete.nc.Rd  create.nc.Rd  dim.def.nc.Rd  dim.inq.nc.Rd  dim.rename.nc.Rd  file.inq.nc.Rd  open.nc.Rd  print.nc.Rd  utinvcal.nc.Rd  var.inq.nc.Rd
branches/2.0/src/: RNetCDF.c
demo/: 00Index  Rmpi_write1_readN.R  Rmpi_writeN_read1.R  pbdMPI_writeN_read1.R  write1_readN.R  writeN_read1.R
inst/: CITATION  HDF5_COPYING  Rprofile  slavedaemon.R
inst/udunits/: udunits2.xml
man/: .var.get.nc.Rd.swp  .var.put.nc.Rd.swp  00RNetCDF.Rd  att.copy.nc.Rd  att.delete.nc.Rd  att.get.nc.Rd  att.inq.nc.Rd  att.put.nc.Rd  att.rename.nc.Rd  close.nc.Rd  config.nc.Rd  create.nc.Rd  dim.def.nc.Rd  dim.inq.nc.Rd  dim.rename.nc.Rd  file.inq.nc.Rd  grp.def.nc.Rd  grp.inq.nc.Rd  grp.rename.nc.Rd  hosts.Rd  mpi.abort.Rd  mpi.barrier.Rd  mpi.bcast.Rd  mpi.bcast.cmd.Rd  mpi.cart.coords.Rd  mpi.cart.create.Rd  mpi.cart.get.Rd  mpi.cart.rank.Rd  mpi.cart.shift.Rd  mpi.cartdim.get.Rd  mpi.comm.Rd  mpi.comm.disconnect.Rd  mpi.comm.free.Rd  mpi.comm.inter.Rd  mpi.comm.set.errhandler.Rd  mpi.comm.spawn.Rd  mpi.const.Rd  mpi.dims.create.Rd  mpi.finalize.Rd  mpi.gather.Rd  (+32 more)
pkg/: DESCRIPTION  INDEX  INSTALL  LICENSE  LICENSE.note  MD5  NEWS  aclocal.m4  cleanup  configure  configure.ac  configure.win
pkg/R/: RNetCDF.R  load.R  load.R.in
pkg/R/windows/: load.R
pkg/man/: 00RNetCDF.Rd  att.copy.nc.Rd  att.get.nc.Rd  att.inq.nc.Rd  att.put.nc.Rd  att.rename.nc.Rd  close.nc.Rd  create.nc.Rd  dim.def.nc.Rd  dim.inq.nc.Rd  dim.rename.nc.Rd  file.inq.nc.Rd  grp.def.nc.Rd  grp.inq.nc.Rd  grp.rename.nc.Rd  open.nc.Rd  print.nc.Rd  read.nc.Rd  sync.nc.Rd  type.def.nc.Rd  utcal.nc.Rd  utinit.nc.Rd  utinvcal.nc.Rd  var.def.nc.Rd  var.get.nc.Rd  var.inq.nc.Rd  var.put.nc.Rd  var.rename.nc.Rd
pkg/src/: Makevars.win  RNetCDF.c  attribute.c  common.c  common.h  convert.c  dataset.c  dataset.h  dimension.h  group.c  group.h  type.c  udunits.h
pkg/tests/: RNetCDF-test.R
src/: Makefile  Makefile.cfg.in  Makefile.common.in  Makefile.win  Makevars.in  Makevars.win  RNetCDF.c  RNetCDF.h  Rmpi.c  Rmpi.h  attribute.c  attribute.h  common.c  common.h  config.h.in  convert.c  convert.h  dataset.c  dataset.h  dimension.c  dimension.h  group.c  group.h  init.c  internal.c  msmpi.def  type.c  type.h  udunits.c  udunits.h  variable.c  variable.h
tests/: .RNetCDF-test.R.swp  RNetCDF-test.R  testthat.R
tests/testthat/: helper.R  test-dataset.R  test-utility.R
tests/testthat/_snaps/: utility.md
tests/testthat/data/: RNetCDF-test-netcdf4.nc  RNetCDF-test-netcdf4.rds
tools/: configure.win.ac  convert.m4  make-recursive.sh  release.sh  update-configure.sh  update-convert-c.sh  winlibs.R  wintest.R
www/: index.php
